Default city Name Changed to Mumbai

--- a/site/index.html
+++ b/site/index.html
@@ -28,7 +28,7 @@
             </button>
         </div>
         <div class="weather">
-            <h2 class="city">Weather in Tokyo</h2> 
+            <h2 class="city">Weather in Mumbai</h2> 
             <h1 class="temp">26.52°C</h1>
             <div class="flex">
                 <img src="https://openweathermap.org/img/wn/04d.png" alt="" class="icon" />
